# metal-strength-calculation

./: .gitignore  LICENSE  README.md  ms  pyproject.toml  roof
.claude/skills/metal-strength/: SKILL.md
.claude/skills/metal-strength/references/: buckling-curves.md  section-properties.md
docs/: make_images.py
docs/superpowers/specs/: 2026-07-22-roof-shapes-design.md
metal_strength/: __init__.py  bom.py  cli.py  design.py  ec3.py  frame3d.py  i18n.py  loads.py  mcp_server.py  model.py  sections.py  shapes.py  viewer.py  viz.py
metal_strength/data/: prices.json  profiles.json
tests/: smoke_mcp.py  test_bom_design.py  test_ec3.py  test_frame3d.py  test_loads.py  test_mcp_server.py  test_model.py  test_sections.py  test_shapes.py  test_skill_consistency.py  test_viewer.py  test_viz.py
