[project]
name = "metal-strength"
version = "0.1.0"
description = "Eurocode steel strength calculator: from a single bending rod to a whole 3D roof under snow"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "pydantic>=2.0",
    "matplotlib>=3.8",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "blue-prints>=0.6"]

[project.scripts]
metal-strength = "metal_strength.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["metal_strength"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# The mesh cross-check takes ~4 minutes; run it with `pytest -m slow`.
addopts = "-m 'not slow'"
markers = ["slow: independent cross-validation, minutes not seconds"]
